# mobile_manipulator_ws

./: README.md
src/contact_graspnet_ros2/: package.xml  setup.cfg  setup.py
src/contact_graspnet_ros2/contact_graspnet_ros2/: contact_graspnet.py  grasp_demo.py  test.py
src/mobile_bringup/: CMakeLists.txt  package.xml
src/mobile_bringup/launch/: _robot_moveit_realmove.launch.py  arm_bringup.launch.py  display.launch.py
src/mobile_bringup/srdf/: xarm.srdf.xacro
src/mobile_bringup/urdf/: mobile_base.urdf.xacro  mobile_manipulator.urdf.xacro
src/mobile_teleop/: CMakeLists.txt  package.xml
src/mobile_teleop/config/: xarm_moveit_servo_config.yaml
src/mobile_teleop/include/mobile_teleop/: joystick_input.h
src/mobile_teleop/launch/: _robot_moveit_servo_realmove.launch.py  teleop.launch.py
src/mobile_teleop/src/: gripper_send_action.cpp  joystick_input.cpp
src/pymoveit2/examples/: ex_gripper.py  ex_gripper_fake.py  ex_pose_goal.py  ex_pose_goal_panda.py
src/pymoveit2/pymoveit2/robots/: xarm7.py
src/tk23_vision/: README.md  vision.bash
src/tk23_vision/src/: image_save.py  img2vec.py  similarity_others.py  similarity_others_vec.py
src/tk23_vision/src/object_detection/: setup.py
src/tk23_vision/src/object_detection/object_detection/: point_direction.py  (+2 more)
src/tk23_vision/src/tinker_vision_msgs/: CMakeLists.txt  package.xml
src/tracer_ros2/tracer_base/launch/: tracer_base.launch.py
src/urdf_import/: Readme.md  package.xml  setup.cfg  setup.py
src/urdf_import/urdf_import/: moveit_configs_builder.py
src/xarm_ros2/xarm_description/urdf/: xarm_device_macro.xacro
src/xarm_ros2/xarm_moveit_config/rviz/: moveit.rviz
src/xarm_ros2/xarm_moveit_servo/launch/: _robot_moveit_servo_realmove.launch.py
src/xarm_ros2/xarm_moveit_servo/rviz/: servo.rviz
src/xarm_ros2/xarm_moveit_servo/src/: xarm_joystick_input.cpp
(+11 files in other folders)
